--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,7 @@
 /phpunit.xml
 ###< symfony/phpunit-bridge ###
 node_modules
+
+###> symfony/asset-mapper ###
+/public/assets/
+###< symfony/asset-mapper ###
